G1 zero_filled optimization when committing CardCountsTable does not work

XMLWordPrintable

    • gc
    • b22

      When committing pages g1 has an optimization to re-use OS-level zero filling of newly committed pages.

      This current does not work properly for the G1RegionsSmallerThanCommitSizeMapper::commit() call, e.g. for the card counts table.

      A 4k page on x86 spans two (1M) regions; for the first one of that set the code correctly passes zero_filled == true to the on_commit handler, but the second does not - which means that useless work is done.

      This impacts startup time slightly

            Assignee:
            Stefan Johansson
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: