8233439: G1 zero_filled optimization when committing CardCountsTable does not work

Reviewed-by: tschatzl, kbarrett